--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&family=Montserrat:wght@400;600;700&display=swap"
       rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="dns-prefetch" href="https://tasteorama.onrender.com" />
+    <link rel="preconnect" href="https://tasteorama.onrender.com" crossorigin />
     <title>Tasteorama</title>
   </head>
   <body>
